--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="author" content="">
       <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-      <title>Massachusetts: It's time to speak out for your right to repair</title>
+      <title>Nebraska: It's time to speak out for your right to repair</title>
 
       <link href='https://actionnetwork.org/css/style-embed.css' rel='stylesheet' type='text/css' />
 
@@ -38,28 +38,25 @@
          <div class="container">
             <div class="row">
                <div class="col-md-8 col-md-offset-2">
-                  <h3>Massachusetts,</h3>
+                  <h3>Nebraska,</h3>
                   <h1>It's time to speak out for your right to repair</h1>
-                  <p>The people of Massachusetts have always stood up for their
-                  right to repair. In 2012, voters passed a law that ensured
-                  residents' right to repair their car wherever they wanted.
-                  Now, it's time to do the same for electronics.</p>
-                  <p>With the <a href="https://malegislature.gov/Bills/189/House/H3383">Digital Right to Repair Bill, H.3383</a>, we have a chance to guarantee our right to repair electronics
-—like smartphones,
+                  <p>The people of Nebraska have always stood up for their
+                  right to repair.
+                  <p>We have a chance to guarantee our right to repair electronics — like smartphones,
                   computers, and even farm equipment. We have a chance to help
                   the environment and stand up for local repair jobs—the corner
                   mom-and-pop repair shops that keep getting squeezed out by
                   manufacturers.</p>
-                  <p>The <a href="https://malegislature.gov/Bills/189/House/H3383">Digital Right to Repair Bill</a> requires manufacturers to
+                  <p>Digital right to repair requires manufacturers to
                   provide owners and independent repair businesses with fair
                   access to service information, security updates, and
                   replacement parts.</p>
 
                   <p>If you agree with us, find out who represents you in the
-                  Massachusetts legislature. Tell them you support the
+                  Nebraska legislature. Tell them you support a
                   bipartisan Digital Right to Repair Bill. Tell them that you
                   believe repair should be fair, affordable, and accessible.
-                  Stand up for the right to repair in Massachusetts.</p>
+                  Stand up for the right to repair in Nebraska.</p>
                </div>
             </div><!-- /row -->
          </div> <!-- /container -->
@@ -76,10 +73,10 @@
             <div id="tellstory" class="col-md-10 col-md-offset-1">
                <h3 >Tell your repair story</h3>
                <div class="hline"></div>
-               
+
                <script>window.yepnope || document.write('<script src="https://actionnetwork.org/includes/js/yepnope154-min.js"><\/script>');</script><script src='https://actionnetwork.org/widgets/v2/letter/support-the-fair-repair-bill-s3998-3?format=js&source=widget&style=full'></script>
                <div id='can-letter-area-support-the-fair-repair-bill-s3998-3' style='width: 100%'><!-- this div is the target for our HTML insertion --></div>
-               
+
                <style>
                      #can_embed_form {border: 0 !important;}
                      h2.line { display: none;}
@@ -117,7 +114,7 @@
                      }
 
                   </style>
-                  <p>** This form does not work for addresses outside of Massachusetts — and may not work for some rural addresses. If you cannot use this form, do not be deterred. Look up your local representative the old-fashioned way, tell them you support Fair Repair, and tell them why. **</p>
+                  <p>** This form does not work for addresses outside of Nebraska — and may not work for some rural addresses. If you cannot use this form, do not be deterred. Look up your local representative the old-fashioned way, tell them you support Fair Repair, and tell them why. **</p>
                </div>
             </div>
       </div>
