Update text for repair.org

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <a class="logo ifixit" href="https://ifixit.com"><img src="assets/img/ifixit.png" title="iFixit" /></a>
                </div>
                <div class="col-md-3 col-md-3 col-sm-3">
-                  <a class="logo drtr"  href="https://digitalrighttorepair.org"><img src="http://static1.squarespace.com/static/53821f30e4b07bcdae103594/t/56a6aec6b204d514446bc703/1454625798991/" title="Digital Right to Repair" /></a>
+                  <a class="logo drtr"  href="https://repair.org"><img src="http://static1.squarespace.com/static/53821f30e4b07bcdae103594/t/56a6aec6b204d514446bc703/1454625798991/" title="Repair.org" /></a>
                </div>
                <div class="col-md-3 col-md-3 col-sm-3">
                   <a class="logo eff"  href="https://eff.org"><img src="assets/img/eff.png" title="Electronic Frontier Foundation" /></a>
