Minor text updates

--- a/index.html
+++ b/index.html
@@ -39,21 +39,18 @@
                <div class="col-md-8 col-md-offset-2">
                   <h3>Nebraska,</h3>
                   <h1>It's time to speak out for your right to repair</h1>
-                  <p>The people of Nebraska have always stood up for their
-                  right to repair.
-                  <p>We have a chance to guarantee our right to repair electronics — like smartphones,
-                  computers, and even farm equipment. We have a chance to help
+                  <p>Nebraska Senators have a chance to guarantee your right to repair your equipment – like tractors, smart phones, computers and everything “smart”.  It’s yours – you own it – and you shouldn’t have to beg the manufacturer for permission to fix it.  We have a chance to help
                   the environment and stand up for local repair jobs—the corner
                   mom-and-pop repair shops that keep getting squeezed out by
                   manufacturers.</p>
-                  <p>Digital right to repair requires manufacturers to
+                  <p>Fair Repair requires manufacturers to
                   provide owners and independent repair businesses with fair
                   access to service information, security updates, and
                   replacement parts.</p>
 
                   <p>If you agree with us, find out who represents you in the
                   Nebraska legislature. Tell them you support a
-                  bipartisan Digital Right to Repair Bill. Tell them that you
+                  bipartisan Fair Repair Bill. Tell them that you
                   believe repair should be fair, affordable, and accessible.
                   Stand up for the right to repair in Nebraska.</p>
                </div>
