Update text for new bill

--- a/index.html
+++ b/index.html
@@ -39,20 +39,13 @@
                <div class="col-md-8 col-md-offset-2">
                   <h3>Nebraska,</h3>
                   <h1>It's time to speak out for your right to repair</h1>
-                  <p>Nebraska Senators have a chance to guarantee your right to repair your equipment – like tractors, smart phones, computers and everything “smart”.  It’s yours – you own it – and you shouldn’t have to beg the manufacturer for permission to fix it.  We have a chance to help
-                  the environment and stand up for local repair jobs—the corner
-                  mom-and-pop repair shops that keep getting squeezed out by
-                  manufacturers.</p>
-                  <p>Fair Repair requires manufacturers to
-                  provide owners and independent repair businesses with fair
-                  access to service information, security updates, and
-                  replacement parts.</p>
+                  <p>This year, the people of Nebraskans have a chance to guarantee their right to repair their equipment—like tractors, farm equipment, digital equipment, and even cell phones.</p>
 
-                  <p>If you agree with us, find out who represents you in the
-                  Nebraska legislature. Tell them you support a
-                  bipartisan Fair Repair Bill. Tell them that you
-                  believe repair should be fair, affordable, and accessible.
-                  Stand up for the right to repair in Nebraska.</p>
+                  <p>It’s yours. You own it. You shouldn’t have to beg the manufacturer for permission to fix it when it breaks. The Fair Repair Act, or <a href="http://nebraskalegislature.gov/FloorDocs/105/PDF/Intro/LB67.pdf">LB 67</a>, is simple. It requires manufacturers to provide owners and independent repair businesses with fair access to service information and replacement parts. So you can fix the stuff you own quickly—and get back on with your life.</p>
+
+                  <p>But manufacturers like John Deere and Apple don’t like that idea. When your tractor breaks or your cell phone stops working, they want to be the only people who can fix it. And they get to set whatever prices they want.</p>
+
+                  <p>It’s time to fight for your right to repair and defend local repair jobs—the corner mom-and-pop repair shops that keep getting squeezed out. Find out who represents you in the Nebraska legislature. Tell them you support the bipartisan <a href="http://nebraskalegislature.gov/FloorDocs/105/PDF/Intro/LB67.pdf">Fair Repair Act, LB 67</a>. Tell them that you believe repair should be fair, affordable, and accessible. Stand up for the right to repair in Nebraska.</p>
                </div>
             </div><!-- /row -->
          </div> <!-- /container -->
