--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <div class="col-md-8 col-md-offset-2">
                   <h3>Nebraska,</h3>
                   <h1>It's time to speak out for your right to repair</h1>
-                  <p>This year, the people of Nebraskans have a chance to guarantee their right to repair their equipment—like tractors, farm equipment, digital equipment, and even cell phones.</p>
+                  <p>This year, the people of Nebraska have a chance to guarantee their right to repair their equipment—like tractors, farm equipment, digital equipment, and even cell phones.</p>
 
                   <p>It’s yours. You own it. You shouldn’t have to beg the manufacturer for permission to fix it when it breaks. The Fair Repair Act, or <a href="http://nebraskalegislature.gov/FloorDocs/105/PDF/Intro/LB67.pdf">LB 67</a>, is simple. It requires manufacturers to provide owners and independent repair businesses with fair access to service information and replacement parts. So you can fix the stuff you own quickly—and get back on with your life.</p>
 
