--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="">
       <meta name="author" content="">
-      <link rel="shortcut icon" href="assets/ico/favicon.ico">
+      <link rel="shortcut icon" href="/favicon.ico">
 
       <title>Nebraska: It's time to speak out for your right to repair</title>
 
