--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="author" content="">
       <link rel="shortcut icon" href="/favicon.ico">
 
-      <title>Nebraska: It's time to speak out for your right to repair</title>
+      <title>Washington: It's time to speak out for your right to repair</title>
 
       <link href='https://actionnetwork.org/css/style-embed.css' rel='stylesheet' type='text/css' />
 
@@ -37,15 +37,42 @@
          <div class="container">
             <div class="row">
                <div class="col-md-8 col-md-offset-2">
-                  <h3>Nebraska,</h3>
+                  <h3>Washington,</h3>
                   <h1>It's time to speak out for your right to repair</h1>
-                  <p>This year, the people of Nebraska have a chance to guarantee their right to repair their equipment—like tractors, farm equipment, digital equipment, and even cell phones.</p>
+                  <p>
+                  This year, the people of Washington have a chance to
+                  guarantee their right to repair their equipment—like
+                  tractors, farm equipment, digital equipment, and even cell
+                  phones.
+                  </p>
 
-                  <p>It’s yours. You own it. You shouldn’t have to beg the manufacturer for permission to fix it when it breaks. The Fair Repair Act, or <a href="http://nebraskalegislature.gov/FloorDocs/105/PDF/Intro/LB67.pdf">LB 67</a>, is simple. It requires manufacturers to provide owners and independent repair businesses with fair access to service information and replacement parts. So you can fix the stuff you own quickly—and get back on with your life.</p>
+                  <p>
+                  It’s yours. You own it. You shouldn’t have to beg the
+                  manufacturer for permission to fix it when it breaks. The
+                  Right to Repair Act is simple. It requires manufacturers to
+                  provide owners and independent repair businesses with fair
+                  access to service information and affordable replacement
+                  parts. So you can fix the stuff you own quickly—and get back
+                  on with your life.
+                  </p>
 
-                  <p>But manufacturers like John Deere and Apple don’t like that idea. When your tractor breaks or your cell phone stops working, they want to be the only people who can fix it. And they get to set whatever prices they want.</p>
+                  <p>
+                  But manufacturers like John Deere and Apple don’t like that
+                  idea. When your tractor breaks or your cell phone stops
+                  working, they want to be the only people who can fix it. And
+                  they get to set whatever prices they want for parts and
+                  service.
+                  </p>
 
-                  <p>It’s time to fight for your right to repair and defend local repair jobs—the corner mom-and-pop repair shops that keep getting squeezed out. Find out who represents you in the Nebraska legislature. Tell them you support the bipartisan <a href="http://nebraskalegislature.gov/FloorDocs/105/PDF/Intro/LB67.pdf">Fair Repair Act, LB 67</a>. Tell them that you believe repair should be fair, affordable, and accessible. Stand up for the right to repair in Nebraska.</p>
+                  <p>
+                  It’s time to fight for your right to repair and defend local
+                  repair jobs—the corner mom-and-pop repair shops that keep
+                  getting squeezed out. Find out who represents you in the
+                  Washington state legislature. Tell them you support the Right
+                  to Repair Act. Tell them that you believe repair should be
+                  fair, affordable, and accessible. Stand up for the right to
+                  repair in Washington.
+                  </p>
                </div>
             </div><!-- /row -->
          </div> <!-- /container -->
@@ -56,58 +83,28 @@
       MIDDLE CONTENT
       ***************************************************************************************************************** -->
 
+      <div class="container mtb callpower">
+         <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+               <h3>Make your voice heard</h3>
+               <p>Enter your phone number and zip code and we'll automatically connect you with each of your representatives. Don't worry, we'll guide you through the process.</p>
+               <style>iframe{width:100%}</style>
+               <iframe src="https://callpower.repair.org/api/campaign/7/embed_iframe.html" frameBorder="0" scrolling="no" id="CallPowerFrame"></iframe>
+               <script src="https://callpower.repair.org/static/embed/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({checkOrigin: false}, '#CallPowerFrame');</script>
+            </div>
+         </div>
+      </div>
+
+
+      <!--
       <div class="container mtb">
-
          <div class="row" >
-            <div id="tellstory" class="col-md-10 col-md-offset-1">
+            <div id="tellstory" class="col-md-8 col-md-offset-2">
                <h3 >Tell your repair story</h3>
-               <div class="hline"></div>
 
-               <script>window.yepnope || document.write('<script src="https://actionnetwork.org/includes/js/yepnope154-min.js"><\/script>');</script>
-               <script src='https://actionnetwork.org/widgets/v2/letter/support-fair-repair-in-nebraska?format=js&source=widget'></script>
-               <div id='can-letter-area-support-fair-repair-in-nebraska' style='width: 100%'><!-- this div is the target for our HTML insertion --></div>
-
-               <style>
-                     #can_embed_form {border: 0 !important;}
-                     h2.line { display: none;}
-                     h2.entry-title { display: none !important;}
-                     #action_info { display: none; }
-                     #can_embed_form { padding: 20px 0 0 0 !important;}
-                     #can_embed_form.can_768 #can_main_col { width: 40% !important;}
-                     #can_embed_form.can_768 #can_sidebar { width: 55% !important;}
-                     #can_embed_form p {
-                        font-size: 16px !important;
-                        line-height: 30px !important;
-                        font-family: 'Helvetica', Arial, sans-serif !important;
-                        font-weight: 400 !important;
-                        color: #4E4E4E !important;
-                        outline: none !important;
-                        background-color: white !important;
-                        width: 100% !important;
-                        max-width: 100% !important;
-                     }
-                     #can_embed_form li {
-                        margin-left: 25px;
-                     }
-                     #can_embed_form ul {
-                        margin-bottom: 20px !important;
-                     }
-                     #logo_wrap {
-                        display: none !important;
-                     }
-                     #can_embed_form input[type="submit"]{
-                        font-size: 30px !important;
-                        font-family: 'lato' !important;
-                     }
-                     #can_embed_form textarea {
-                        min-height: 200px;
-                     }
-
-                  </style>
-                  <p>** This form does not work for addresses outside of Nebraska — and may not work for some rural addresses. If you cannot use this form, do not be deterred. Look up your local representative the old-fashioned way, tell them you support Fair Repair, and tell them why. **</p>
                </div>
             </div>
-      </div>
+         </div>-->
 
       <!-- *****************************************************************************************************************
       OUR CLIENTS
